# dook

./: CHANGES.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
assets/completions/: dook.bash  dook.zsh
config/: c.yml  css.yml  cxx.yml  cython.yml  glsl.yml  go.yml  html.yml  javascript.yml  lua.yml  markdown.yml  python.yml  rust.yml  shell.yml  tex.yml  tsx.yml  typescript.yml  yaml.yml
src/: config.rs  def.json  def.rs  dep_resolution.rs  dook.json  dook.yml  downloads_policy.rs  dumptree.rs  inputs.rs  ipynb.rs  language_aliases.rs  language_name.rs  lib.rs  loader.rs  main.rs  main_search.rs  multi_line_string.rs  outputs.rs  paging.rs  query_compiler.rs  range_union.rs  run_grep.rs  searches.rs  subfiles.rs  uncase.rs
test_cases/: c.c  cython.pyx  html.html  injection.md  javascript.js  python.py  rust.rs  tex.tex  typescript.tsx
tests/: config.rs  examples.rs
tests/common/: mod.rs
