[package]
name = "dook"
version = "0.1.0"
edition = "2021"
authors = ["pteromys <pteromys@gmail.com>"]
description = "Look up definitions in your code"
license = "MIT"
homepage = "https://github.com/pteromys/dook"
repository = "https://github.com/pteromys/dook"
readme = "README.md"
keywords = ["search", "grep", "tree-sitter", "code-search"]
categories = ["command-line-utilities", "development-tools"]
include = ["/src", "/test_cases", "/README.md", "/LICENSE"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "unicode", "wrap_help"] }
console = "0.15"
directories = "5.0.1"
env_logger = "0.11.3"
log = "0.4.21"
os_str_bytes = "7.0"
regex = "1.10"  # match ripgrep's default engine since we shell out to ripgrep
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
tree-sitter = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-go = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"

[[bin]]
path = "src/main.rs"
name = "dook"
