[package]
name = "dook"
version = "0.2.0"
edition = "2021"
rust-version = "1.83"
authors = ["pteromys <pteromys@gmail.com>"]
description = "Look up definitions in your code"
license = "MIT"
homepage = "https://github.com/pteromys/dook"
repository = "https://github.com/pteromys/dook"
readme = "README.md"
keywords = ["search", "grep", "tree-sitter", "code-search"]
categories = ["command-line-utilities", "development-tools"]
include = ["/.cargo", "/src", "/tests", "/test_cases", "/assets", "/README.md", "/LICENSE", "/dook.svg", "!.ruff_cache"]

[features]
stdin = []
static_python = ["dep:tree-sitter-python"]

[dependencies]
base16ct = "0.2.0"
clap = { version = "4.5.4", features = ["derive", "unicode", "wrap_help"] }
console = "0.15"
digest = "0.10.0"
etcetera = "0.8.0"
enum-derive-2018 = "3"
env_logger = "0.11.3"
hyperpolyglot = { version = "0.1.7", git = "https://github.com/monkslc/hyperpolyglot.git", rev = "40f091679b94057ec925f7f8925e2960d1d9dbf2" }
libloading = "0.8.6"
log = "0.4.21"
macro-attr-2018 = "3"
merde = { version = "10.0.0", features = ["core", "deserialize", "yaml"] }
os_str_bytes = "7.0"
pager = "^0.16"
regex = "1.11"  # match ripgrep's default engine since we shell out to ripgrep
sha2 = "0.10.8"
tempfile = "3"
tree-sitter = "^0.25"
tree-sitter-loader = { version = "^0.25", default-features = false, features = ["tree-sitter-highlight"] }
tree-sitter-python = { version = "0.23.6", optional = true }

[[bin]]
path = "src/main.rs"
name = "dook"

[lib]
# src/lib.rs only exists for integration tests to link against;
# don't rerun the unit tests on it since they'll all run for src/main.rs anyway.
test = false

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1

# rustflags are in ./.cargo/config.toml
